Improve credential handling and add requirements.txt
Replaced hardcoded placeholder-credentials with environment variable loading using python-dotenv in hello_world.py and hello_chart.py. Added checks for empty DataFrames in basic_api_access.py and hello_chart.py to prevent errors. Updated .gitignore to exclude output, venv, and .env files. Added requirements.txt for dependency management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .idea/**
 python-api-access/.idea/
 python-api-access/__pycache__/
+python-api-access/output/*
+python-api-access/venv/*
+python-api-access/.env
