Add multi-threshold setup script and update API access
Added 'multi threshold setup - PA-407.py' for configuring multiple thresholds and daily mail subscriptions for Pegelalarm stations. Updated 'basic_api_access.py' to remove 'verify=False' from requests for improved security. Updated .gitignore to exclude .DS_Store files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ python-api-access/__pycache__/
 python-api-access/output/*
 python-api-access/venv/*
 python-api-access/.env
+python-api-access/.DS_Store
